# CDSFoam-deepflame

./: Allwmake  CDSFoam_df.C  CMakeLists.txt  README.md  calculateR.H  centralCourantNo.H  createFields.H  createFieldsSave.H  dfCDSFoam.C  preCal.H  setRootCase2.H  updateFieldsSave.H
CDS_system/: CDS_Solver.C  CDS_Solver.H
Eqn/: rhoEEqn.H  rhoEqn.H  rhoUEqn.H  rhoYEqn.H
Figs/: DDT.tif  Riemann.tif
Make/: files  options
example/oneD_reactiveShockTube/: Allclean  Allrun  H2_AR.yaml
example/oneD_reactiveShockTube/constant/: CanteraTorchProperties  sprayCloudProperties  thermophysicalProperties
example/oneD_reactiveShockTube/constant/polyMesh/: boundary
example/oneD_reactiveShockTube/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution  setFieldsDict
example/twoD_detonation_6670/: oran.yaml
example/twoD_detonation_6670/0_orig/: AR  H2  H2O  O2  T  U  Ydefault  alphat  maxp  nut  p
example/twoD_detonation_6670/constant/: CanteraTorchProperties  dynamicMeshDict  thermophysicalProperties
example/twoD_detonation_6670/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  setFieldsDict
fluxSchemes/Make/: files
fluxSchemes/lnInclude/: AUSMPlus.C  AUSMPlus.H  AUSMPlusUp.C  AUSMPlusUp.H  HLL.C  HLL.H  HLLC.C  HLLC.H  HLLCP.C  HLLCP.H  Kurganov.C  Kurganov.H  RiemannConvectionScheme.C  RiemannConvectionScheme.H  RiemannConvectionSchemes.C  Tadmor.C  Tadmor.H  fluxScheme.C  fluxScheme.H  fluxSchemeTmp.C  newFluxScheme.C
